Recipe Page Content

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/ceviche.html">Ceviche</a>
+    <a href="./recipes/ceviche.html">Mexican Ceviche</a>
 </body>
 </html>
