--- a/odin-recipes/recipes/ceviche.html
+++ b/odin-recipes/recipes/ceviche.html
@@ -1,1 +1,36 @@
 <h1>Ceviche</h1>
+<img src="../images/ceviche.jpg" alt="ceviche" width="600">
+
+<h3>Description</h3>
+<p>This is Authentic Mexican Ceviche, I've had it several times in Mexico, and also have learned to cook Mexican food for
+my family. Every time I make this it's a hit.</p>
+<p>Learn how to make this popular, Mexican-Style Shrimp Ceviche with shrimp, lime juice, avocado, jalapeño, cilantro and
+finish it off with some hot sauce if that is your style.</p>
+
+<h3>Ingredients</h3>
+<p>
+    <ul>
+        <li>5 large lemons, juiced</li>
+        <li>1 pound jumbo shrimp, peeled and deveined</li>
+        <li>¼ cup chopped fresh cilantro, or to taste</li>
+        <li>tomato and clam juice cocktail</li>
+        <li>2 white onions, finely chopped</li>
+        <li>1 cucumber, peeled and finely chopped</li>
+        <li>1 large tomatoes, seeded and chopped</li>
+        <li>3 fresh jalapeno peppers, seeded and minced</li>
+        <li>1 bunch radishes, finely diced</li>
+        <li>2 cloves fresh garlic, minced</li>
+        <li>tortilla chips</li>
+    </ul>
+</p>
+
+<h3>Steps</h3>
+<p>
+    <ol>
+        <li>Place shrimp in a bowl (You may either coarsely chop the shrimp, or leave them whole, depending on your preference.) Add
+        lemon, covering shrimp completely. Cover, and refrigerate for 30 minutes, or until opaque and slightly firm.</li>
+        <li>Add tomatoes, onions, cucumber, radishes, and garlic; toss to combine. Gradually add cilantro and jalapenos to desired
+        taste (jalapeno will grow stronger while marinating). Stir in tomato and clam juices to desired consistency. Cover, and
+        refrigerate for 1 hour. Serve chilled with tortilla chips.</li>
+    </ol>
+</p>
