--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -10,5 +10,11 @@
     <h1>Odin Recipes</h1>
 
     <a href="./recipes/ceviche.html">Mexican Ceviche</a>
+    <br>
+    <br>
+    <a href="./recipes/chickenalfredo.html">Chicken & Broccoli Alfredo with Fettucine</a>
+    <br>
+    <br>
+    <a href="./recipes/tacos.html">Beef Tacos</a>
 </body>
 </html>
